@@ -1,3 +1,8 @@
+2000-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
+	* gtksourceview/gtksourceprintcompositor.c: fix a couple of
+	typos in docs.
+
 2008-01-17  Yevgen Muntyan  <muntyan@tamu.edu>
 
 	* gtksourceview/language-specs/fortran.lang: added comment
